--- a/solupoint/Views/Home/Contact.cshtml
+++ b/solupoint/Views/Home/Contact.cshtml
@@ -3,16 +3,16 @@
     ViewBag.Message = "Siamo qui per assisterti!";
 }
 <main aria-labelledby="title" style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 2rem;">
-    <h2 id="title" style="font-size: 2rem; color: #2c3e50; margin-bottom: 0.5rem;">@ViewBag.Title</h2>
-    <h3 style="font-size: 1.2rem; color: #16a085; margin-bottom: 1.5rem;">@ViewBag.Message</h3>
+    @*<h2 id="title" style="font-size: 2rem; color: #2c3e50; margin-bottom: 0.5rem;">@ViewBag.Title</h2>
+    <h3 style="font-size: 1.2rem; color: #16a085; margin-bottom: 1.5rem;">@ViewBag.Message</h3>*@
 
     <section style="background-color: #ecf0f1; padding: 1.5rem; border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
         <h4 style="font-size: 1.5rem; color: #2980b9;">Azienda</h4>
-        <p style="margin: 0.5rem 0;"><strong>Soluzioni Integrate di Passeri Giuseppe</strong></p>
+        <p style="margin: 0.5rem 0;"><strong>Soluzioni Integrate</strong></p>
 
         <h4 style="font-size: 1.5rem; color: #2980b9; margin-top: 1rem;">Indirizzo</h4>
         <address style="font-style: normal; margin: 0.5rem 0;">
-            P.IVA 0432214002
+            P.IVA 04133214002
         </address>
 
         <h4 style="font-size: 1.5rem; color: #2980b9; margin-top: 1rem;">Contatti</h4>
