--- a/solupoint/Views/Home/Contact.cshtml
+++ b/solupoint/Views/Home/Contact.cshtml
@@ -10,12 +10,12 @@
         <h4 style="font-size: 1.5rem; color: #2980b9;">Azienda</h4>
         <p style="margin: 0.5rem 0;"><strong>Soluzioni Integrate</strong></p>
 
-        <h4 style="font-size: 1.5rem; color: #2980b9; margin-top: 1rem;">Indirizzo</h4>
+        <h4 style="font-size: 1.5rem; color: #2980b9; margin-top: 1rem;">Partita IVA</h4>
         <address style="font-style: normal; margin: 0.5rem 0;">
             P.IVA 04133214002
         </address>
 
         <h4 style="font-size: 1.5rem; color: #2980b9; margin-top: 1rem;">Contatti</h4>
-        <p style="margin: 0.5rem 0;"><strong>Email:</strong> <a href="mailto:passeri@solupoint.com" style="color: #3498db;">passeri@solupoint.com</a></p>
+        <p style="margin: 0.5rem 0;"><strong>Email:</strong> <a href="mailto:info@solupoint.com" style="color: #3498db;">passeri@solupoint.com</a></p>
     </section>
 </main>
