--- a/solupoint/Views/Shared/_Layout.cshtml
+++ b/solupoint/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <li>@Html.ActionLink("Prodotti", "Prodotti", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Informazioni", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contatti", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    @*<li>@Html.ActionLink("FAQ", "Faq", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Costi", "Costi", "Home", new { area = "" }, new { @class = "nav-link" })</li>*@
+
 
                     @if (Session["Username"] != null)
                     {
